# dog-face-recognition

./: .gitignore  CMakeLists.txt  README.md
header/: face_dog_detector.h  face_dog_extractor.h  image_model.h  ncnn_model.h  tools.h  types.h
header/types/: det.h  feature.h
src/: face_dog_detector.cpp  face_dog_extractor.cpp  image_model.cpp  main.cpp  ncnn_model.cpp  tools.cpp  yolov5.cpp
